--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ environs==11.2.1
 greenlet==3.1.1
 marshmallow==3.23.1
 packaging==24.2
+psycopg2==2.9.10
 pycparser==2.22
 pycryptodome==3.21.0
 PyQt6==6.7.1
