--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+alembic==1.14.0
 cffi==1.17.1
 cryptography==44.0.0
 environs==11.2.1
 greenlet==3.1.1
+Mako==1.3.7
+MarkupSafe==3.0.2
 marshmallow==3.23.1
 packaging==24.2
 psycopg2==2.9.10
@@ -13,3 +16,5 @@ PyQt6_sip==13.8.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+
+ecdsa~=0.19.0
